--- a/Formatting unemployment rate bar plot.qmd
+++ b/Formatting unemployment rate bar plot.qmd
@@ -88,7 +88,7 @@ head(unemp_greece_latest)
 names(unemp_greece_latest)
 ```
 
-## 4. Plot basig bar plot using ggplot 
+## 4. Plot basic bar plot using ggplot 
 
 This is going to be the starting point of formatting a standard ggplot2 bar plot. It only contains the basic element and a single geom() to plot a simple bar plot.
 
