--- a/Recent population trends in Spain GitHub output.Rmd
+++ b/Recent population trends in Spain GitHub output.Rmd
@@ -2,7 +2,7 @@
 title: "Recent Spain population trends"
 author: "PLR"
 date: "`r Sys.Date()`"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
