prevented warnings to be rendered

--- a/Recent population trends in Spain GitHub output.Rmd
+++ b/Recent population trends in Spain GitHub output.Rmd
@@ -69,7 +69,7 @@ INE_calc_fields
 These charts below describe the evolution of Total, foreign and spanish nationals population for the 2005-2025 period:
 
 - Spain total population
-```{r Spain total population bar plot, echo=TRUE}
+```{r Spain total population bar plot, echo=TRUE,warning=FALSE,message=FALSE}
 options(scipen=999)
 
 Spanish_population_plot <- INE_calc_fields %>% 
@@ -87,7 +87,7 @@ Spanish_population_plot
 
 Then this is the foreign population in Spain for the same time period.
 
-```{r Spain foreign population bar plot, echo=TRUE}
+```{r Spain foreign population bar plot, echo=TRUE,warning=FALSE,message=FALSE}
 options(scipen=999)
 
 forign_population_plot <- INE_calc_fields %>% 
@@ -106,7 +106,7 @@ forign_population_plot
 
 This last plot displays national population in Spain for the 2005-2025 period
 
-```{r Spain national population bar plot, echo=TRUE, warning=FALSE}
+```{r Spain national population bar plot, echo=TRUE, warning=FALSE,message=FALSE}
 options(scipen=999)
 
 national_population_plot <- INE_calc_fields %>% 
